--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header .shopping span{
     position: fixed;
     top: 0;
     left: 150%;
-    width: 300px;
+    width: 500px;
     background-color: #453e3b;
     height: 100vh;
     transform: 0.5s;
@@ -78,11 +78,64 @@ header .shopping span{
     color: #fff;
 }
 .active .card{
-    left: calc(130% - 500px);
+    left: calc(110% - 500px);
 }
 .active .container{
     transform: translateX(-200px);
 }
+.list .item{
+    text-align: center;
+    background-color: #dce0e1;
+    padding: 20px;
+    box-shadow: 0 50px 50px #757676;
+    letter-spacing: 1px;
+}
+.list .item img{
+    width: 90px;
+}
+.list .item .title{
+    font-weight: 600;
+}
+.list .item .price{
+    margin: 10px;
+}
+.list .item button{
+    background-color: #1c1f25;
+    color: #fff;
+    padding: 10px;
+    width: 100%;
+}
+.listCard li{
+    display: grid;
+    grid-template-columns: 100px repeat(3, 1fr);
+    color: #fff;
+    row-gap: 10px;
+    margin-bottom: 20px;
+}
+.listCard li div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.listCard li img{
+    width: 30px;
+}
+.listCard button{
+    width: auto;
+    background-color: #fff5;
+    border: none;
+}
+.listCard .count{
+    margin: 0 10px;
+}
+
+
+
+
+
+
+
+
 
 
 
